# Tracabilite

ocarina-2.0w/resources/runtime/polyorb-qos-ada/: AUTHORS  Makefile  Makefile.am  Makefile.common  Makefile.in  aclocal.m4  config.status  configure  configure.ac
ocarina-2.0w/resources/runtime/polyorb-qos-ada/doc/: Makefile  Makefile.am  Makefile.in  accessor-package-body.ada.texi  accessor-package.ada.texi  accessor-usage.aadl.texi  accessor-usage.ada.texi  arao-cyclic_array.ads.texi  arao-obj_adapters.ads.texi  arao-object_adapter_g.ads.texi  arao-periodic_threads-full_tasking.ads.texi  arao-periodic_threads-no_tasking.ads.texi  arao-periodic_threads.ads.texi  arao-requests.ads.texi  arao-rt_obj_adapters.ads.texi  arao-setup-base.ads.texi  arao-setup-oa-multithreaded-prio.ads.texi  arao-setup-oa-multithreaded.ads.texi  arao-setup-oa.ads.texi  arao-setup-ocarina_oa.ads.texi  arao-setup-priorities.ada.texi  arao-setup-tasking-full_tasking.ads.texi  arao-setup-tasking-no_tasking.ads.texi  arao-setup-tasking.ads.texi  arao-setup.ada.texi  arao-setup.ads.texi  arao-threads.ads.texi  arao-utils.ads.texi  data-component-helper.ada.texi  data-component-protected.aadl.texi  data-component-record.aadl.texi  data-component-record.ada.texi  data-component-simple.aadl.texi  data-component-simple.ada.texi  empty-subprogram.aadl.texi  empty-subprogram.ada.texi  hybrid-algorithm.ada.texi  hybrid-subprogram-1.ada.texi  hybrid-subprogram-2.ada.texi  hybrid-subprogram-3.ada.texi  (+29 more)
ocarina-2.0w/resources/runtime/polyorb-qos-ada/doc/polyorb-qos-ada_ug.html/: API-to-manipulate-PolyORB.html  About-This-Guide.html  Ada-Mapping-Rules.html  Components-mapping-rules.html  Conventions.html  Data-components-mapping.html  Node-positioning.html  PolyORB-Setup-files.html  Process-components-mapping.html  Setup-of-the-application.html  Thread-components-mapping.html  What-This-Guide-Contains.html
ocarina-2.0w/resources/runtime/polyorb-qos-ada/doc/positioning/: polyorb-parameters-partition.ada  positioning-sample.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/doc/sources/: accessor-package-body.ada  accessor-package.ada  accessor-usage.aadl  accessor-usage.ada  arao-setup-priorities.ada  arao-setup.ada  data-component-helper.ada  data-component-protected.aadl  data-component-record.aadl  data-component-record.ada  data-component-simple.aadl  data-component-simple.ada  empty-subprogram.aadl  empty-subprogram.ada  hybrid-algorithm.ada  hybrid-subprogram-1.ada  hybrid-subprogram-2.ada  hybrid-subprogram-3.ada  hybrid-subprogram.aadl  opaque-subprogram-c.aadl  opaque-subprogram-c.ada  opaque-subprogram.aadl  opaque-subprogram.ada  process-shared_variable-protected.aadl  process-shared_variable-protected.ada  protected-subprogram-generated.ada  protected-subprogram-user.ada  protected-subprogram.aadl  protected_type-generic-package-method.ada  protected_type-generic-package.ada  pure-call-sequence-subprogram.aadl  pure-call-sequence-subprogram.ada  setup-sample-priorities.aadl  setup-sample-priorities.ada  setup-sample.aadl  setup-sample.ada  thread-component.aadl  thread-in-ports-servants.ada  thread-in-ports.aadl  thread-main.ada  (+2 more)
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/: Makefile  Makefile.am  Makefile.in  run_all_examples.sh
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/bbs/: Makefile  Makefile.am  Makefile.in  README  repository.adb  repository.ads  scenario.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/bintree/: Makefile  Makefile.am  Makefile.in  README  all_types.aadl  bool_pkg.adb  bool_pkg.ads  common.ads  float_pkg.adb  int_pkg.adb  int_pkg.ads  msg_bool_pkg.ads  msg_float_pkg.adb  msg_float_pkg.ads  msg_int_pkg.adb  msg_int_pkg.ads  msg_str_pkg.adb  msg_str_pkg.ads  record_pkg.adb  record_pkg.ads  repository.adb  scenario_1.aadl  scenario_2.aadl  scenario_2_udp.aadl  software.aadl  str_pkg.adb  str_pkg.ads  type_tree.aadl  type_tree_udp.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/hybrid_subprogram/: Makefile  Makefile.am  Makefile.in  README  hybrid_subprogram.aadl  pure_call_sequence_subprogram.aadl  repository.adb  repository.ads  repository_2.adb  scenario_1.aadl  scenario_2.aadl  scenario_3.aadl  software.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/import/: Makefile  Makefile.am  Makefile.in  README  import2.aadl  import4.aadl  receive.c  repository.ads  scenario_1.aadl  scenario_2.aadl  scenario_3.aadl  software.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/man_in_the_middle/: Makefile  Makefile.am  Makefile.in  README  hardware.aadl  repository.adb  repository.ads  scenario.aadl  software.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/monolithic/: Makefile  Makefile.am  Makefile.in  README  monolithic.aadl  repository.adb  repository.ads  scenario.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/examples/priorities/: Makefile  Makefile.am  Makefile.in  README  priorities_2.aadl  repository.adb  repository.ads  scenario.aadl  scenario_inv.aadl  software.aadl  software_inversed_priorities.aadl
ocarina-2.0w/resources/runtime/polyorb-qos-ada/src/: Makefile  Makefile.am  Makefile.in  aadl.adb  aadl.ads  arao-cyclic_array.adb  arao-cyclic_array.ads  arao-obj_adapters.ads  arao-object_adapter_g.ads  arao-periodic_threads-full_tasking.adb  arao-periodic_threads-full_tasking.ads  arao-periodic_threads-no_tasking.adb  arao-periodic_threads-no_tasking.ads  arao-periodic_threads.adb  arao-periodic_threads.ads  arao-requests.adb  arao-requests.ads  arao-setup-base.adb  arao-setup-base.ads  arao-setup-oa-multithreaded-prio.adb  arao-setup-oa-multithreaded.adb  arao-setup-oa-multithreaded.ads  arao-setup-oa.ads  arao-setup-ocarina_oa.adb  arao-setup-ocarina_oa.ads  arao-setup-tasking-full_tasking.ads  arao-setup-tasking-no_tasking.adb  arao-setup-tasking.ads  arao-setup.ads  arao-threads.ads  arao-utils.adb  arao-utils.ads  arao.ads  arao_polyorb.gpr  arao_polyorb.lgpr
ocarina-2.0w/resources/runtime/polyorb-qos-ada/support/: Makefile  Makefile.am  Makefile.in  gen_api_doc  polyorb.m4
(+1349 files in other folders)
